added cors filter instead of bean config